chore: adds better setup

--- a/packages/chrome-extension/src/popup/popup.html
+++ b/packages/chrome-extension/src/popup/popup.html
@@ -6,17 +6,17 @@
   <title>Clueprint</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,300;9..144,400;9..144,500&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
-      min-width: 300px;
-      min-height: 400px;
-      background: linear-gradient(135deg, #0f0f1a 0%, #1a1a2e 50%, #16213e 100%);
-      font-family: 'Plus Jakarta Sans', -apple-system, BlinkMacSystemFont, sans-serif;
-      color: #e0e0e0;
+      min-width: 320px;
+      min-height: 420px;
+      background: #000000;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+      color: #ffffff;
     }
-    #app { min-height: 400px; }
+    #app { min-height: 420px; }
   </style>
 </head>
 <body>
