refactor: rename project from ai-browser-devtools to clueprint
- Updated project references in CLI commands and MCP server.
- Refactored Toast and RegionPicker components for improved UI and functionality.
- Removed unused base.css and integrated styles directly into components.
- Enhanced element and region report formatting with additional accessibility information.
- Introduced prompt definitions for better user interaction in MCP server.
- Cleaned up Tailwind CSS configuration by removing glassmorphism styles.

--- a/packages/chrome-extension/src/devtools/panel.html
+++ b/packages/chrome-extension/src/devtools/panel.html
@@ -4,215 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AI DevTools Panel</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, monospace;
-      font-size: 12px;
-      background: #1e1e1e;
-      color: #d4d4d4;
-      min-height: 100vh;
-    }
-
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 8px 12px;
-      background: #252526;
-      border-bottom: 1px solid #3c3c3c;
-    }
-
-    .header h1 {
-      font-size: 13px;
-      font-weight: 500;
-      color: #fff;
-    }
-
-    .status {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .status-badge {
-      display: flex;
-      align-items: center;
-      gap: 4px;
-      padding: 4px 8px;
-      border-radius: 4px;
-      font-size: 11px;
-      background: #3c3c3c;
-    }
-
-    .status-badge.connected {
-      background: rgba(76, 175, 80, 0.2);
-      color: #4caf50;
-    }
-
-    .status-badge.disconnected {
-      background: rgba(244, 67, 54, 0.2);
-      color: #f44336;
-    }
-
-    .content {
-      padding: 12px;
-    }
-
-    .section {
-      margin-bottom: 16px;
-    }
-
-    .section-title {
-      font-size: 11px;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-      color: #888;
-      margin-bottom: 8px;
-      padding-bottom: 4px;
-      border-bottom: 1px solid #3c3c3c;
-    }
-
-    .log-entry {
-      padding: 6px 8px;
-      margin-bottom: 4px;
-      background: #252526;
-      border-radius: 4px;
-      border-left: 3px solid #3c3c3c;
-      font-family: 'Consolas', 'Monaco', monospace;
-      font-size: 11px;
-      line-height: 1.4;
-      word-break: break-word;
-    }
-
-    .log-entry.error {
-      border-left-color: #f44336;
-      background: rgba(244, 67, 54, 0.1);
-    }
-
-    .log-entry.warning {
-      border-left-color: #ff9800;
-      background: rgba(255, 152, 0, 0.1);
-    }
-
-    .log-entry.success {
-      border-left-color: #4caf50;
-    }
-
-    .log-time {
-      color: #888;
-      margin-right: 8px;
-    }
-
-    .log-type {
-      font-weight: 600;
-      margin-right: 8px;
-    }
-
-    .network-entry {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      padding: 6px 8px;
-      margin-bottom: 4px;
-      background: #252526;
-      border-radius: 4px;
-      font-size: 11px;
-    }
-
-    .network-entry.error {
-      background: rgba(244, 67, 54, 0.1);
-    }
-
-    .network-method {
-      font-weight: 600;
-      color: #569cd6;
-      min-width: 40px;
-    }
-
-    .network-status {
-      padding: 2px 6px;
-      border-radius: 3px;
-      font-size: 10px;
-      font-weight: 600;
-    }
-
-    .network-status.success {
-      background: rgba(76, 175, 80, 0.2);
-      color: #4caf50;
-    }
-
-    .network-status.error {
-      background: rgba(244, 67, 54, 0.2);
-      color: #f44336;
-    }
-
-    .network-url {
-      flex: 1;
-      color: #9cdcfe;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-
-    .network-duration {
-      color: #888;
-      font-size: 10px;
-    }
-
-    .empty-state {
-      padding: 24px;
-      text-align: center;
-      color: #666;
-    }
-
-    .btn {
-      padding: 6px 12px;
-      border: none;
-      border-radius: 4px;
-      background: #0e639c;
-      color: white;
-      cursor: pointer;
-      font-size: 11px;
-    }
-
-    .btn:hover {
-      background: #1177bb;
-    }
-  </style>
+  <link rel="stylesheet" href="panel.css">
 </head>
 <body>
-  <div class="header">
-    <h1>🔧 AI Browser DevTools</h1>
-    <div class="status">
-      <div class="status-badge" id="mcpStatus">
-        <span>MCP: Checking...</span>
-      </div>
-      <button class="btn" id="btnClear">Clear</button>
-    </div>
-  </div>
-
-  <div class="content">
-    <div class="section">
-      <div class="section-title">Network Requests (Failures Only)</div>
-      <div id="networkLog">
-        <div class="empty-state">Monitoring network requests...</div>
-      </div>
-    </div>
-
-    <div class="section">
-      <div class="section-title">Console Errors</div>
-      <div id="consoleLog">
-        <div class="empty-state">Monitoring console...</div>
-      </div>
-    </div>
-  </div>
-
+  <div id="app"></div>
   <script src="panel.js"></script>
 </body>
 </html>
