--- a/packages/chrome-extension/src/popup/popup.html
+++ b/packages/chrome-extension/src/popup/popup.html
@@ -7,17 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,300;9..144,400;9..144,500&family=Inter:wght@400;500&display=swap" rel="stylesheet">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body {
-      min-width: 320px;
-      min-height: 420px;
-      background: #000000;
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-      color: #ffffff;
-    }
-    #app { min-height: 420px; }
-  </style>
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
   <div id="app"></div>
